@@ -1,11 +1,15 @@
 MAKE_EXEC = $(MAKE) -f ../Makefile SRCS='' TARGET=test sub-all
+MAKE_EXEC_CPLUSPLUS = $(MAKE) -f ../Makefile SRCS='' TARGET=test CC=c++ sub-all
 
-all::  macro-1.test macro-2.test cplusplus-throw.i
+all::  macro-1.test macro-2.test cplusplus-throw.cplusplustest
 
-.SUFFIXES: .i .test
+.SUFFIXES: .i .test .cplusplustest
 
 .i.test:
 	$(MAKE_EXEC) IFILE=$<
+
+.i.cplusplustest:
+	$(MAKE_EXEC_CPLUSPLUS) IFILE=$< SWIGOPT=-c++
 
 clean::
 	rm -f matrix *_wrap* *~ .~* core
