@@ -20,7 +20,10 @@ trunk of the CVS tree.
 	   paths like /usr/local/include; this only causes build
 	   problems.
 	   New directory: Examples/Guile/test-suite, where a few
-	   preprocessor-related bugs in 1.3a5 are demonstrated. 
+	   bugs in 1.3a5 are demonstrated. 
+	   Handle C++ methods that have both a "const" and a "throw"
+	   directive (see Examples/Guile/test-suite/cplusplus-throw.i); 
+	   thanks to Scott B. Drummonds for the report and the fix. 
 
 6/12/2001: mkoeppe
 	   [Guile] VECTORLENINPUT and LISTLENINPUT now have separate
